Update EasyShopPlugin.java